--- a/py/To-Do-Manager/tasks.json
+++ b/py/To-Do-Manager/tasks.json
@@ -1,1 +1,1 @@
-[{"name": "123", "completed": false}]
+[{"name": "123", "completed": false}, {"name": "123", "completed": true}, {"name": "123", "completed": true}]
