Flet To-Do App Tutorial modified to save tasks in a json and reload them on launch, https://flet.dev/docs/tutorials/python-todo

--- a/py/To-Do-Manager/tasks.json
+++ b/py/To-Do-Manager/tasks.json
@@ -1,1 +1,1 @@
-[{"name": "123", "completed": false}, {"name": "123", "completed": true}, {"name": "123", "completed": true}]
+[{"name": "123", "completed": false}, {"name": "omg ", "completed": false}, {"name": "jesus", "completed": false}, {"name": "does it save properly now?", "completed": true}, {"name": "perfect", "completed": true}]
